Allows user to add and remove converted weights